--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prayerstimeapi",
   "version": "1.0.0",
   "description": "Prayers Time Public API",
-  "main": "index.js",
+  "main": "lib/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc",
